--- a/src/app/tweets/tweets.component.html
+++ b/src/app/tweets/tweets.component.html
@@ -1,3 +1,3 @@
 <div class="user col-md-2 text-center" *ngFor="let tweet of results">
-	<h1>{{tweet.text}}</h1>
+	<p [innerHTML]="tweet.text"></p>
 </div>
