--- a/src/app/tweets/tweets.component.html
+++ b/src/app/tweets/tweets.component.html
@@ -2,7 +2,8 @@
   <div class="row text-center">
     <div class="col-md-12">
       <h2>Find tweets@</h2>
-      <a href="https://applyhead.com" target="_blank">Made using Angular 4</a>
+		<a routerLink="/about" routerLinkActive="active">About</a>
+
     </div>
   </div>
 </div>
