--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,8 @@
 <a routerLink="/" routerLinkActive="active">Back</a>
 
-<p>
-Checkout the details for {{this.user}}
-</p>
+<h1>{{userName()}}</h1>
+
+<img src="{{profile_image_url}}" />
+<img src="{{profile_banner_url}}" />
+
+<h2>Followers: {{follower_count}}</h2>
