--- a/src/app/tweet-list/tweet-list.component.html
+++ b/src/app/tweet-list/tweet-list.component.html
@@ -19,6 +19,6 @@
 
 <div class="user col-md-2 text-center" *ngFor="let tweet of results">
 
-	<app-subtweet [text]="tweet.text"></app-subtweet>
+	<app-tweet [text]="tweet.text"></app-tweet>
 	
 </div>
